...
                                                <connections>
                                                    <action selector="quantityStepperValueChanged:" destination="kNc-9R-nsV" eventType="valueChanged" id="ILC-PD-gum"/>
                                                </connections>
                                            </stepper>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tiP-Tb-VbQ">
                                                <rect key="frame" x="101" y="0.0" width="35" height="29"/>
                                                <accessibility key="accessibilityConfiguration" identifier="quantityLabel"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="ivY-VZ-aYb">
                                                        <variation key="heightClass=regular-widthClass=compact" constant="35"/>
                                                    </constraint>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
...
                                                <connections>
                                                    <action selector="getRandomPeopleButtonTapped:" destination="kNc-9R-nsV" eventType="touchUpInside" id="vrs-nz-5AW"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Vg-pK-VJ1">
                                                <rect key="frame" x="270" y="0.0" width="38" height="29"/>
                                                <accessibility key="accessibilityConfiguration" identifier="resetButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="PqI-bi-P8i">
                                                        <variation key="heightClass=regular-widthClass=compact" constant="38"/>
                                                    </constraint>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
...
